# C_MasterClass

./: README.md
Advanced/: Aliasing and effective types.md  Dealing with Seg faults.md  MacroFunctions.md  Memory manipulation.md
Advanced/Memory/: MemoryPool.md  VirtualMemory.md
Advanced/Memory/Examples/: inquiries.h  memory.c
Basics/: Arrays.md  BitwiseOperators.md  ConditionalOperator.md  DataTypes.md  ErrorHandling.md  Functions.md  GenericPointers.md  Macros.md  MemoryManagement.md  Modifiers.md  Pointers.md  PointersToFunctions.md  Scope.md  Strings.md  Structures.md  Unions.md  rvalues+lvalues.md
Basics/Notes/: Overview of Fixed and Floating Points.xopp
CMake/Step1/: CMakeLists.txt  README.md  main.c
CMake/Step2/: CMakeLists.txt  README.md  TutorialConfig.h.in  main.c
CMake/Step2/libs/custom/: CMakeLists.txt  myio.c  myio.h
CMake/Step3/: CMakeLists.txt  README.md
CMake/Step3/config/: TutorialConfig.h.in
CMake/Step3/libs/add/: CMakeLists.txt  add.c  add.h
CMake/Step3/libs/subtract/: CMakeLists.txt  subtract.c  subtract.h
CMake/Step3/src/: commandx.c  main.c
c/Docs/: Arrays.md  BasicOutputFunction.md  BitwiseOperators.md  ConditionalOperator.md  DataTypes.md  Functions.md  Macros.md  Modifiers.md  NamingConventions.md  Scope.md  rvalues+lvalues.md
c/Docs/Notes/: Exceeding The Valid Range of Data Types.xopp
